// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-eslint default 1`] = `
"/.idea/
/node_modules/
/*.js"
`;

exports[`typescript-eslint default 2`] = `
"module.exports = {
	extends: [
		'./.eslintrc.strict.js',
	].map(require.resolve),
	/* define rules for IDE only here https://github.com/namics/frontend-defaults/issues/12 */
	rules: {
		'no-console': 1
	}
};
"
`;

exports[`typescript-eslint default 3`] = `
"module.exports = {
	extends: ['@namics/eslint-config/configurations/typescript-react.js'].map(require.resolve),
};
"
`;

exports[`typescript-eslint default 4`] = `
"{
  \\"options\\": {
    \\"ts\\": true,
    \\"es\\": false,
    \\"eslint\\": true,
    \\"editorconfig\\": false,
    \\"prettier\\": false,
    \\"stylelint\\": false,
    \\"gitignore\\": false,
    \\"npmrc\\": false,
    \\"readme\\": false,
    \\"githooks\\": false,
    \\"commitlint\\": false,
    \\"nodeVersion\\": false,
    \\"webpack\\": false,
    \\"build\\": false,
    \\"install\\": false,
    \\"force\\": true,
    \\"dryRun\\": false,
    \\"mode\\": \\"api\\"
  },
  \\"mergedFiles\\": {
    \\"package.json\\": {
      \\"override\\": false,
      \\"data\\": {
        \\"scripts\\": {
          \\"lint\\": \\"npm-run-all lint:*\\",
          \\"lint:ts\\": \\"eslint . --ext .jsx,.js,.ts,.tsx -c .eslintrc.strict.js\\"
        },
        \\"devDependencies\\": {
          \\"@namics/eslint-config\\": \\"8.0.0\\",
          \\"@namics/ts-config\\": \\"0.3.0\\",
          \\"eslint\\": \\"6.2.1\\",
          \\"eslint-plugin-import\\": \\"2.18.2\\",
          \\"npm-run-all\\": \\"4.1.5\\",
          \\"typescript\\": \\"3.4.5\\"
        }
      }
    },
    \\".eslintrc.js\\": {
      \\"override\\": false,
      \\"data\\": \\"module.exports = {\\\\n\\\\textends: [\\\\n\\\\t\\\\t'./.eslintrc.strict.js',\\\\n\\\\t].map(require.resolve),\\\\n\\\\t/* define rules for IDE only here https://github.com/namics/frontend-defaults/issues/12 */\\\\n\\\\trules: {\\\\n\\\\t\\\\t'no-console': 1\\\\n\\\\t}\\\\n};\\\\n\\"
    },
    \\".eslintrc.strict.js\\": {
      \\"override\\": false,
      \\"data\\": \\"module.exports = {\\\\n\\\\textends: ['@namics/eslint-config/configurations/typescript-react.js'].map(require.resolve),\\\\n};\\\\n\\"
    },
    \\".eslintignore\\": {
      \\"override\\": false,
      \\"data\\": \\"/.idea/\\\\n/node_modules/\\\\n/*.js\\"
    },
    \\"tsconfig.json\\": {
      \\"override\\": false,
      \\"data\\": \\"{\\\\n\\\\t\\\\\\"extends\\\\\\": \\\\\\"@namics/ts-config\\\\\\",\\\\n\\\\t\\\\\\"exclude\\\\\\": [\\\\\\"dist\\\\\\", \\\\\\"build\\\\\\", \\\\\\"node_modules\\\\\\", \\\\\\"__tests__\\\\\\"]\\\\n}\\\\n\\"
    }
  }
}"
`;

exports[`typescript-eslint default 5`] = `
"{
  \\"scripts\\": {
    \\"lint\\": \\"npm-run-all lint:*\\",
    \\"lint:ts\\": \\"eslint . --ext .jsx,.js,.ts,.tsx -c .eslintrc.strict.js\\"
  },
  \\"devDependencies\\": {
    \\"@namics/eslint-config\\": \\"8.0.0\\",
    \\"@namics/ts-config\\": \\"0.3.0\\",
    \\"eslint\\": \\"6.2.1\\",
    \\"eslint-plugin-import\\": \\"2.18.2\\",
    \\"npm-run-all\\": \\"4.1.5\\",
    \\"typescript\\": \\"3.4.5\\"
  }
}"
`;

exports[`typescript-eslint default 6`] = `
"{
	\\"extends\\": \\"@namics/ts-config\\",
	\\"exclude\\": [\\"dist\\", \\"build\\", \\"node_modules\\", \\"__tests__\\"]
}
"
`;

exports[`typescript-eslint default 7`] = `
Array [
  .eslintignore,
  .eslintrc.js,
  .eslintrc.strict.js,
  .frontend-defaults-rc.json,
  package.json,
  tsconfig.json,
]
`;

exports[`typescript-eslint with-githooks 1`] = `
/.idea/
/node_modules/
/*.js
`;

exports[`typescript-eslint with-githooks 2`] = `
module.exports = {
	extends: [
		'./.eslintrc.strict.js',
	].map(require.resolve),
	/* define rules for IDE only here https://github.com/namics/frontend-defaults/issues/12 */
	rules: {
		'no-console': 1
	}
};

`;

exports[`typescript-eslint with-githooks 3`] = `
module.exports = {
	extends: ['@namics/eslint-config/configurations/typescript-react.js'].map(require.resolve),
};

`;

exports[`typescript-eslint with-githooks 4`] = `
{
  "options": {
    "ts": true,
    "es": false,
    "eslint": true,
    "editorconfig": false,
    "prettier": false,
    "stylelint": false,
    "gitignore": false,
    "npmrc": false,
    "readme": false,
    "githooks": true,
    "commitlint": false,
    "nodeVersion": false,
    "webpack": false,
    "build": false,
    "install": false,
    "force": true,
    "dryRun": false,
    "mode": "api"
  },
  "mergedFiles": {
    "package.json": {
      "override": false,
      "data": {
        "scripts": {
          "lint": "npm-run-all lint:*",
          "lint:ts": "eslint . --ext .jsx,.js,.ts,.tsx -c .eslintrc.strict.js"
        },
        "devDependencies": {
          "@namics/eslint-config": "8.0.0",
          "@namics/ts-config": "0.3.0",
          "eslint": "6.2.1",
          "eslint-plugin-import": "2.18.2",
          "husky": "3.0.4",
          "lint-staged": "9.2.3",
          "npm-run-all": "4.1.5",
          "typescript": "3.4.5"
        },
        "husky": {
          "hooks": {
            "pre-commit": "lint-staged"
          }
        },
        "lint-staged": {
          "linters": {
            "src/**/*.{js,jsx,ts,tsx}": [
              "eslint --ext .jsx,.js,.ts,.tsx"
            ]
          }
        }
      }
    },
    ".huskyrc": {
      "override": false,
      "data": "# ~/.huskyrc/n# Note: it will run in /bin/sh shell/nif command -v nodenv >/dev/null 2>&1; then/n  eval /"$(nodenv init -)/"/nfi"
    },
    ".eslintrc.js": {
      "override": false,
      "data": "module.exports = {/n/textends: [/n/t/t'./.eslintrc.strict.js',/n/t].map(require.resolve),/n/t/* define rules for IDE only here https://github.com/namics/frontend-defaults/issues/12 *//n/trules: {/n/t/t'no-console': 1/n/t}/n};/n"
    },
    ".eslintrc.strict.js": {
      "override": false,
      "data": "module.exports = {/n/textends: ['@namics/eslint-config/configurations/typescript-react.js'].map(require.resolve),/n};/n"
    },
    ".eslintignore": {
      "override": false,
      "data": "/.idea//n/node_modules//n/*.js"
    },
    "tsconfig.json": {
      "override": false,
      "data": "{/n/t/"extends/": /"@namics/ts-config/",/n/t/"exclude/": [/"dist/", /"build/", /"node_modules/", /"__tests__/"]/n}/n"
    }
  }
}
`;

exports[`typescript-eslint with-githooks 5`] = `
# ~/.huskyrc
# Note: it will run in /bin/sh shell
if command -v nodenv >/dev/null 2>&1; then
  eval "$(nodenv init -)"
fi
`;

exports[`typescript-eslint with-githooks 6`] = `
{
  "scripts": {
    "lint": "npm-run-all lint:*",
    "lint:ts": "eslint . --ext .jsx,.js,.ts,.tsx -c .eslintrc.strict.js"
  },
  "devDependencies": {
    "@namics/eslint-config": "8.0.0",
    "@namics/ts-config": "0.3.0",
    "eslint": "6.2.1",
    "eslint-plugin-import": "2.18.2",
    "husky": "3.0.4",
    "lint-staged": "9.2.3",
    "npm-run-all": "4.1.5",
    "typescript": "3.4.5"
  },
  "husky": {
    "hooks": {
      "pre-commit": "lint-staged"
    }
  },
  "lint-staged": {
    "linters": {
      "src/**/*.{js,jsx,ts,tsx}": [
        "eslint --ext .jsx,.js,.ts,.tsx"
      ]
    }
  }
}
`;

exports[`typescript-eslint with-githooks 7`] = `
{
	"extends": "@namics/ts-config",
	"exclude": ["dist", "build", "node_modules", "__tests__"]
}

`;

exports[`typescript-eslint with-githooks 8`] = `
Array [
  .eslintignore,
  .eslintrc.js,
  .eslintrc.strict.js,
  .frontend-defaults-rc.json,
  .huskyrc,
  package.json,
  tsconfig.json,
]
`;

exports[`typescript-eslint with-prettier 1`] = `
/.idea/
/node_modules/
/*.js
`;

exports[`typescript-eslint with-prettier 2`] = `
module.exports = {
	extends: [
		'./.eslintrc.strict.js',
	].map(require.resolve),
	/* define rules for IDE only here https://github.com/namics/frontend-defaults/issues/12 */
	rules: {
		'no-console': 1
	}
};

`;

exports[`typescript-eslint with-prettier 3`] = `
module.exports = {
	extends: [
		'@namics/eslint-config/configurations/typescript-react.js',
		'@namics/eslint-config/configurations/typescript-react-disable-styles.js',
	].map(require.resolve),
};

`;

exports[`typescript-eslint with-prettier 4`] = `
{
  "options": {
    "ts": true,
    "es": false,
    "eslint": true,
    "editorconfig": false,
    "prettier": true,
    "stylelint": false,
    "gitignore": false,
    "npmrc": false,
    "readme": false,
    "githooks": false,
    "commitlint": false,
    "nodeVersion": false,
    "webpack": false,
    "build": false,
    "install": false,
    "force": true,
    "dryRun": false,
    "mode": "api"
  },
  "mergedFiles": {
    "package.json": {
      "override": false,
      "data": {
        "scripts": {
          "lint": "npm-run-all lint:*",
          "lint:ts": "eslint . --ext .jsx,.js,.ts,.tsx -c .eslintrc.strict.js",
          "prettier": "prettier --write /"**/*.*(js|jsx|ts|tsx|json)/""
        },
        "devDependencies": {
          "@namics/eslint-config": "8.0.0",
          "@namics/prettier-config": "0.2.0",
          "@namics/ts-config": "0.3.0",
          "eslint": "6.2.1",
          "eslint-plugin-import": "2.18.2",
          "npm-run-all": "4.1.5",
          "prettier": "1.18.2",
          "typescript": "3.4.5"
        }
      }
    },
    ".prettierignore": {
      "override": false,
      "data": "# Node/n**/node_modules/n**/package.json/n**/package-lock.json/n/n# Generated/n**/bower.json/n**/lerna.json/n/n# Build/n**/build/n**/dist/n**/public/n**/coverage/n**/storybook-static/n/n# Nitro/n**/project/blueprints/n**/.yo-rc.json"
    },
    ".prettierrc.js": {
      "override": false,
      "data": "module.exports = require('@namics/prettier-config');/n"
    },
    ".eslintrc.js": {
      "override": false,
      "data": "module.exports = {/n/textends: [/n/t/t'./.eslintrc.strict.js',/n/t].map(require.resolve),/n/t/* define rules for IDE only here https://github.com/namics/frontend-defaults/issues/12 *//n/trules: {/n/t/t'no-console': 1/n/t}/n};/n"
    },
    ".eslintrc.strict.js": {
      "override": false,
      "data": "module.exports = {/n/textends: [/n/t/t'@namics/eslint-config/configurations/typescript-react.js',/n/t/t'@namics/eslint-config/configurations/typescript-react-disable-styles.js',/n/t].map(require.resolve),/n};/n"
    },
    ".eslintignore": {
      "override": false,
      "data": "/.idea//n/node_modules//n/*.js"
    },
    "tsconfig.json": {
      "override": false,
      "data": "{/n/t/"extends/": /"@namics/ts-config/",/n/t/"exclude/": [/"dist/", /"build/", /"node_modules/", /"__tests__/"]/n}/n"
    }
  }
}
`;

exports[`typescript-eslint with-prettier 5`] = `
# Node
**/node_modules
**/package.json
**/package-lock.json

# Generated
**/bower.json
**/lerna.json

# Build
**/build
**/dist
**/public
**/coverage
**/storybook-static

# Nitro
**/project/blueprints
**/.yo-rc.json
`;

exports[`typescript-eslint with-prettier 6`] = `
module.exports = require('@namics/prettier-config');

`;

exports[`typescript-eslint with-prettier 7`] = `
{
  "scripts": {
    "lint": "npm-run-all lint:*",
    "lint:ts": "eslint . --ext .jsx,.js,.ts,.tsx -c .eslintrc.strict.js",
    "prettier": "prettier --write /"**/*.*(js|jsx|ts|tsx|json)/""
  },
  "devDependencies": {
    "@namics/eslint-config": "8.0.0",
    "@namics/prettier-config": "0.2.0",
    "@namics/ts-config": "0.3.0",
    "eslint": "6.2.1",
    "eslint-plugin-import": "2.18.2",
    "npm-run-all": "4.1.5",
    "prettier": "1.18.2",
    "typescript": "3.4.5"
  }
}
`;

exports[`typescript-eslint with-prettier 8`] = `
{
	"extends": "@namics/ts-config",
	"exclude": ["dist", "build", "node_modules", "__tests__"]
}

`;

exports[`typescript-eslint with-prettier 9`] = `
Array [
  .eslintignore,
  .eslintrc.js,
  .eslintrc.strict.js,
  .frontend-defaults-rc.json,
  .prettierignore,
  .prettierrc.js,
  package.json,
  tsconfig.json,
]
`;
